# sconectl

./: .gitignore  Cargo.toml  README.md  README.template  build.sh
src/: config.rs  helpers.rs  main.rs
