[package]
name = "sconectl"
version = "5.8.4"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["SCONE", "confidential"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
repository = "https://github.com/scontain/sconectl"
homepage = "https://sconedocs.github.io/"
description = "sconectl helps to transform cloud-native applications into cloud-confidential applications. It supports to transform native services into confidential services and services meshes into confidential service meshes."

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
colored = "2.0.0"
which = "4.2.5"
serde_json = "1.0.81"
shells = "0.2.0"
spinners = "4.1.0"
log = "0.4.17"
